some pages  redy with animaton

--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,11 @@
 @tailwind components;
 @tailwind utilities;
 
+.root{
+    scroll-behavior: smooth;
+}
 
+#root{
+    scroll-behavior: smooth;
+  
+}
